Fix map not showing. Fix moving search box. Reposition video player.
To-do: add welcome message

--- a/django_app/static/CSS/stylev2.css
+++ b/django_app/static/CSS/stylev2.css
@@ -41,18 +41,19 @@ body {
 }
 
 #pac-input {
-	position : fixed;
+	//position : fixed;
   background-color: #fff;
   font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
-  left: 50%;
-  transform: translate(-50%, 00%);
+  //left: 50%;
+  //transform: translate(-50%, 00%);
   //padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 300px;
-  z-index:0;
+  width: 100%;
+  //z-index:0;
 }
+
 
 #pac-input:focus {
   border-color: #4d90fe;
@@ -93,8 +94,9 @@ body {
   position: absolute;
   width: 560px;
   height: 360px;
-  top: 150px;
-  left: 150px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: block;
   visibility: hidden;
   //z-index: -1;
